[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/DockingStation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Chapter III/ch03_links/ds_ss02_ch03.tres" type="Resource" id=2]
[ext_resource path="res://World/Waypoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Chapter III/DS_CH03.gd" type="Script" id=4]

[node name="DS_CH03" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="SJ_01" parent="." index="2"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SJ_02" parent="." index="3"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SJ_03" parent="." index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SS02_CH03" parent="." index="5" instance=ExtResource( 3 )]
position = Vector2( 312, 61 )
rotation = 4.71239
connection = ExtResource( 2 )
new_level_path = "res://Levels/Chapter III/SS_CH03_02.tscn"

[editable path="ShipTileset"]
